--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,38 @@
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+*.tfplan
+
+keys
+# Crash log files
+crash.log
+
+# Exclude all .tfvars files, which are likely to contain sentitive data, such as
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
+# to change depending on the environment.
+*.tfvars
+
+*.terraform*
+*.tfstate*
+# Ignore override files as they are usually used to override resources locally and so
+# are not checked in
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
 .terraform.tfstate
 .terraform.lock.hcl
 .terraform.tfstate.backup
 .terraform
+
+.terraformrc
+terraform.rc
+
 node_modules
+*.pem
+pem
